--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<h2>
-    Hii this is repo created by local machine
-    <h3>
-        Added in feature 1 branch
-    </h3>
-</h2>
+<p>Hello Guys  </p>
